<resources>
    <string name="app_name">شهدای مسجد صفاری</string>

    <string name="fullName">نام و نام خانوادگی</string>
    <string name="fatherName">نام پدر</string>
    <string name="birthDate">تاریخ تولد</string>
    <string name="martyrDate">تاریخ شهادت</string>
    <string name="age">سن</string>
    <string name="burialPlace">محل دفن</string>
    <string name="marriage">وضعیت تاهل</string>
    <string name="bio">بایوگرافی</string>
    <string name="missionName">نام عملیات</string>
    <string name="martyrPlace">محل شهادت</string>
    <string name="job">شغل</string>
    <string name="noInformation">اطلاعاتی ثبت نشده</string>
    <string name="addCommentDialog">ثبت نظر</string>
    <string name="comments">نظرات کاربران</string>
    <string name="firstName">نام</string>
    <string name="lastName">نام خانوادگی</string>
    <string name="phoneNumber">شماره تلفن (شماره شما نمایش داده نخواهد شد)</string>
    <string name="commentText">کامنت</string>
    <string name="addComment">اضافه کردن کامنت</string>
    <string name="cancel">انصراف</string>
    <string name="totalCountComment">تعداد نظرات:</string>
    <string name="searchMartyr">نام شهید مورد نظر خود را وارد کنید.</string>
    <string name="searchMartyrNotExist">شهیدی با این نام وجود ندارد.</string>
    <string name="commentNotExist">کامنتی وجود ندارد.</string>
    <string name="errorJsonException">خطا در تجزیه و تحلیل داده های دریافتی از سرور</string>
    <string name="errorThrowable">خطا در اجرای درخواست</string>
    <string name="unknownError">خطای نامشخص</string>

    <string name="sort">مرتب سازی</string>
    <string name="noSort" />
    <string name="minAge">کوچک ترین</string>
    <string name="maxAge">بزرگ ترین</string>
    <string name="firstNameSort">حروف الفبا - نام</string>
    <string name="lastNameSort">حروف الفبا - نام خانوادگی</string>

    <string name="Null">--</string>

    <string-array name="sortTitleArray">
        <item>@string/Null</item>
        <item>@string/minAge</item>
        <item>@string/maxAge</item>
        <item>@string/firstNameSort</item>
        <item>@string/lastNameSort</item>
    </string-array>


    <string name="MinAge">MinAge</string>
    <string name="MaxAge">MaxAge</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>

</resources>